# aggregation-service

./: .gitignore  README.md  docker-compose.yml
node-backend/: .env.example  Dockerfile  generate-token.js  package-lock.json  package.json
node-backend/docs/: openapi.yaml
node-backend/src/: app.js
node-backend/src/config/: logger.js  rabbitmq.js
node-backend/src/controllers/: taskController.js
node-backend/src/middleware/: auth.js  errorHandler.js  validation.js
node-backend/src/routes/: taskRoutes.js
node-backend/src/services/: aggregationService.js  taskProcessor.js
node-backend/src/utils/: jwtHelper.js  retryHelper.js
node-backend/tests/: api.test.js  env.test.js  setup.js
python-producer/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
python-producer/producer/: config.py  producer.py  task_generator.py
